# minecraft-gateway

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.controller  Dockerfile.edge  Dockerfile.velocity  Makefile  PROJECT  README.md  SECURITY.md  docs.json  go.mod  go.sum  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  release.yml  test.yml
api/: buf.gen.yaml
api/v1/: fallbackpolicy_types.go  groupversion_info.go  loginpolicy_types.go  minecraftfallbackroute_types.go  minecraftjoinroute_types.go  minecraftroute_types.go  minecraftserverdiscovery_types.go  shared_types.go  zz_generated.deepcopy.go
cmd/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/edge/: bootstrap.yaml  edge.yaml  kustomization.yaml
config/manager/: edge_xds_service.yaml  kustomization.yaml  manager.yaml  network_xds_service.yaml  xds_service.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: fallbackpolicy_admin_role.yaml  fallbackpolicy_editor_role.yaml  fallbackpolicy_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  loginpolicy_admin_role.yaml  loginpolicy_editor_role.yaml  loginpolicy_viewer_role.yaml  minecraftfallbackroute_admin_role.yaml  minecraftfallbackroute_editor_role.yaml  minecraftfallbackroute_viewer_role.yaml  minecraftjoinroute_admin_role.yaml  minecraftjoinroute_editor_role.yaml  minecraftjoinroute_viewer_role.yaml  minecraftproxyconfig_admin_role.yaml  role.yaml  (+13 more)
crates/envoy-minecraft-extension/: Cargo.toml
crates/envoy-minecraft-extension/src/: lib.rs
crates/minefleet-edge/: Cargo.toml
crates/minefleet-edge/src/: lib.rs  router.rs  validator.rs
docs/: quickstart.mdx
integrations/: build.gradle.kts  settings.gradle.kts
tools/: latest_build_url.sh
(+178 files in other folders)
