[package]
name = "minefleet-edge"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/minefleet/minecraft-gateway"

[dependencies]
# IMPORTANT: pin this to the SAME Envoy commit you build/run against (strict ABI compatibility).
# This is exactly how the dynamic-modules-examples repo does it.
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy", tag = "v1.38.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "minefleet_edge"
path = "src/lib.rs"
crate-type = ["cdylib"]